--- a/emulators/xsystem35/Makefile
+++ b/emulators/xsystem35/Makefile
@@ -10,44 +10,44 @@ MASTER_SITES=	http://8ne.sakura.ne.jp:20008/chika/unitbase/xsys35/down/
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	AliceSoft System 3.5/3.6/3.8/3.9 on X Window System
 
-BROKEN=	Does not build
+LICENSE=	GPLv2 # (or later)
 
-LIB_DEPENDS=	vorbis.4:${PORTSDIR}/audio/libvorbis \
-		jpeg.11:${PORTSDIR}/graphics/jpeg
+LIB_DEPENDS=	vorbis:${PORTSDIR}/audio/libvorbis \
+		jpeg:${PORTSDIR}/graphics/jpeg
 
-USE_AUTOTOOLS=	autoconf libtool
+OPTIONS_DEFINE=	ESOUND DOCS EXAMPLES
+
 USES=		gettext
-USE_GMAKE=	yes
 USE_GNOME=	gtk12
-WANT_GNOME=	yes
-
-PKGMESSAGE=	${WRKSRC}/MESSAGE
-
-DOCSDIR=	${PREFIX}/share/doc/ja/${PORTNAME}
-PATCHES=	pastel.diff
-
-.include <bsd.port.pre.mk>
-
+USE_GMAKE=	yes
+USE_AUTOTOOLS=	autoconf libtool
 CONFIGURE_ARGS=	--without-included-gettext \
-		--program-prefix="" \
 		--with-cachesize=20 \
 		--enable-midi=seq,extp,raw \
 		--enable-cdrom=bsd,mp3
+MAKE_JOBS_SAFE=	yes
+
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 
-.if ${HAVE_GNOME:Mesound}!=""
+SUB_FILES=	pkg-message
+
+DOCSDIR=	${PREFIX}/share/doc/ja/${PORTNAME}
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MESOUND}
 USE_GNOME+=	esound
 CONFIGURE_ARGS+=	--enable-audio=oss,esd --with-default-output=esd
 .else
 CONFIGURE_ARGS+=	--enable-audio=oss --with-default-output=oss
 .endif
 
-#.if defined(WITH_SDL)
+#.if ${PORT_OPTIONS:MSDL}
 #USE_SDL=	sdl
 #CONFIGURE_ARGS+=	--enable-sdl
-#CONFIGURE_ENV+=		"CPPFLAGS=`$(SDL_CONFIG) --cflags`" \
-#			"LIBS=`$(SDL_CONFIG) --libs`"
+#CPPFLAGS+=	$$(${SDL_CONFIG} --cflags)
+#LDFLAGS+=	$$(${SDL_CONFIG} --libs)
 #.else
 CONFIGURE_ARGS+=	--disable-sdl
 #.endif
@@ -59,11 +59,6 @@ BUILD_DEPENDS+=		nasm:${PORTSDIR}/devel/nasm
 CONFIGURE_ARGS+=	--disable-mmx
 .endif
 
-pre-everything::
-#.if !defined(WITH_SDL)
-#	@${ECHO_MSG} '===> Define WITH_SDL to enable SDL support'
-#.endif
-
 post-extract:
 	@${CP} ${WRKSRC}/INSTALL ${WRKSRC}/doc/INSTALL
 
@@ -71,24 +66,27 @@ post-patch:
 	${FIND} ${WRKSRC}/src -type f |\
 		${XARGS} ${GREP} -l '<SDL/SDL' /dev/null |\
 		${XARGS} ${REINPLACE_CMD} -e 's,<SDL/,<,'
+	@${REINPLACE_CMD} -e \
+		's|__COUNTER__|__COUNTER_H__|' ${WRKSRC}/src/counter.h
 
 pre-configure:
 	(cd ${WRKSRC}/libltdl; ${AUTOCONF})
 
 post-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/contrib/instgame ${PREFIX}/bin
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	(cd ${WRKSRC}/doc;\
-		${INSTALL_MAN} * ${DOCSDIR})
+		${INSTALL_DATA} * ${DOCSDIR})
 .endif
+.if ${PORT_OPTIONS:MEXAMPLES}
 	@${MKDIR} ${EXAMPLESDIR}
 	${INSTALL_DATA} ${WRKSRC}/src/xsys35rc.sample ${EXAMPLESDIR}
 	@(cd ${WRKSRC}/contrib; \
 		${INSTALL_DATA} *.* ${EXAMPLESDIR})
 	@(cd ${WRKSRC}/patch; \
-		${INSTALL_DATA} ${PATCHES} ${EXAMPLESDIR})
-	@${SED} -e s,PREFIX,${PREFIX}, ${PKGDIR}/pkg-message > ${WRKSRC}/MESSAGE
-	@${CAT} ${WRKSRC}/MESSAGE
+		${INSTALL_DATA} pastel.diff ${EXAMPLESDIR})
+.endif
+	@${CAT} ${PKGMESSAGE}
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
