- Update MASTER_SITES - Add LICENSE - Add MAKE_JOBS_SAFE - Support CXX properly
PR:		177558
Submitted by:	Ports Fury


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316579 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/mp3stat/Makefile
+++ b/audio/mp3stat/Makefile
@@ -1,51 +1,45 @@
-# ex:ts=8
-# Ports collection makefile for:	mp3stat
-# Date created:			Mar 20, 2002
-# Whom:				ijliao
-#
+# Created by: ijliao
 # $FreeBSD$
-#
 
 PORTNAME=	mp3stat
 PORTVERSION=	2.6.01
 PORTREVISION=	11
 CATEGORIES=	audio
 MASTER_SITES=	https://signal-lost.homeip.net/files/ \
-			http://www.alaskaparadise.com/freebsd/
+		http://www.sourcefiles.org/Multimedia/MP3/Tools/Processing/
 DISTNAME=	${PORTNAME}_${PORTVERSION}
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Read information about mp3s and oggs bitstream
 
+LICENSE=	GPLv2
+
+OPTIONS_DEFINE=	VORBIS DOCS
+OPTIONS_DEFAULT=	VORBIS
+
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 USE_GNOME=	gtk20
 USE_GMAKE=	yes
-MAKE_ARGS=	CXX="${CXX}" CXXFLAGS="${CXXFLAGS}"
+MAKE_JOBS_SAFE=	yes
 
+CXX+=		-I${LOCALBASE}/include -L${LOCALBASE}/lib \
+		-Wl,--rpath,${LOCALBASE}/lib
+
+PORTDOCS=	README
 PLIST_FILES=	bin/mp3stat \
 		lib/mp3stat/input_mp3.so \
 		lib/mp3stat/ui_gtk2.so \
 		lib/mp3stat/ui_console.so
 PLIST_DIRS=	lib/mp3stat
 
-CXX+=		-I${LOCALBASE}/include -L${LOCALBASE}/lib \
-		-Wl,--rpath,${LOCALBASE}/lib
-
-OPTIONS_DEFINE=	VORBIS DOCS
-OPTIONS_DEFAULT=	VORBIS
-
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MVORBIS}
-LIB_DEPENDS+=	vorbis.4:${PORTSDIR}/audio/libvorbis
+LIB_DEPENDS+=	vorbis:${PORTSDIR}/audio/libvorbis
 PLIST_FILES+=	lib/mp3stat/input_vorb.so
 .else
 MAKE_ARGS+=	VORBIS=""
-.endif
-
-.if ${PORT_OPTIONS:MDOCS}
-PORTDOCS=	README
 .endif
 
 post-patch:
@@ -54,7 +48,8 @@ post-patch:
 		 s|-ldl|-lz|g ; \
 		 s|-lc||g ; \
 		 s|-Wl,-soname,.*\.so\.1||g ; \
-		 s|-fpic|-fPIC|g'
+		 s|-fpic|-fPIC|g ; \
+		 s|^CXX|#CXX|g'
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/mp3stat ${PREFIX}/bin
