- Add LICENSE - Remove outdated PERL_LEVEL check - Cleanup Makefile header
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316585 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/p5-XML-SAX-Base/Makefile
+++ b/textproc/p5-XML-SAX-Base/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	p5-XML-SAX-Base
-# Date created:		2012-03-01
-# Whom:			Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
-#
+# Created by: Sunpoet Po-Chuan Hsieh <sunpoet@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	XML-SAX-Base
 PORTVERSION=	1.08
@@ -14,6 +10,9 @@ PKGNAMEPREFIX=	p5-
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Base class SAX Drivers and Filters
 
+LICENSE=	ART10 GPLv1
+LICENSE_COMB=	dual
+
 CONFLICTS=	p5-XML-SAX-0.[0-8]* p5-XML-SAX-0.9[0-8]*
 
 PERL_CONFIGURE=	yes
@@ -22,10 +21,4 @@ MAN3=		XML::SAX::Base.3 \
 		XML::SAX::BuildSAXBase.3 \
 		XML::SAX::Exception.3
 
-.include <bsd.port.pre.mk>
-
-.if ${PERL_LEVEL} < 501001
-TEST_DEPENDS+=	p5-Test-Simple>=0.88:${PORTSDIR}/devel/p5-Test-Simple
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
