- Cleanup Makefile header
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316590 35697150-7ecd-e111-bb59-0022644237b5

--- a/astro/p5-Astro-Coords/Makefile
+++ b/astro/p5-Astro-Coords/Makefile
@@ -33,11 +33,4 @@ MAN3=		Astro::Coords.3 \
 		Astro::Coords::Offset.3 \
 		Astro::Coords::Planet.3
 
-.include <bsd.port.pre.mk>
-
-.if ${PERL_LEVEL} < 501000
-BUILD_DEPENDS+=	p5-Time-Piece>=1.02:${PORTSDIR}/devel/p5-Time-Piece
-RUN_DEPENDS+=	p5-Time-Piece>=1.02:${PORTSDIR}/devel/p5-Time-Piece
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
