- Mark CONFLICTS among mail/libspf2, mail/p5-Mail-SPF and mail/p5-Mail-SPF-Query, all of them installs PREFIX/bin/spfquery [1] - Bump PORTREVISION for package change - While I'm here:   - Replace removed PTHREAD_LIBS with -pthread   - Cleanup Makefile header   - Add CPAN as primary WWW for mail/p5-Mail-SPF-Query
PR:		ports/177682 [1]
Submitted by:	dougb


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316592 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/libspf2/Makefile
+++ b/mail/libspf2/Makefile
@@ -1,13 +1,9 @@
-# New ports collection makefile for:   libspf2
-# Date created:        07 July 2004
-# Whom:                snowchyld
-#
+# Created by: snowchyld
 # $FreeBSD$
-#
 
 PORTNAME=	libspf2
 PORTVERSION=	1.2.9
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	mail
 MASTER_SITES=	http://www.libspf2.org/spf/ \
 		LOCAL/sunpoet
@@ -15,14 +11,14 @@ MASTER_SITES=	http://www.libspf2.org/spf/ \
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Sender Rewriting Scheme 2 C Implementation
 
-CONFLICTS=	${PORTNAME}-1.0.*
+CONFLICTS=	${PORTNAME}-1.0.* p5-Mail-SPF-[0-9]* p5-Mail-SPF-Query-[0-9]*
 
+GNU_CONFIGURE=	yes
 USE_AUTOTOOLS=	libtool
 USE_LDCONFIG=	yes
-GNU_CONFIGURE=	yes
 
 post-patch:
-	@${REINPLACE_CMD} -e 's|-lpthread|${PTHREAD_LIBS}|g' ${WRKSRC}/configure
+	@${REINPLACE_CMD} -e 's|-lpthread|-pthread|g' ${WRKSRC}/configure
 	@${REINPLACE_CMD} -e '/__VA_ARGS__/ s|format, ||g' ${WRKSRC}/src/include/spf_log.h
 
 .include <bsd.port.mk>
