In preparation of the removal of USE_FREETYPE from bsd.port.mk: remove USE_FREETYPE from all ports using it
While here trim some headers, and do some conversion to new options framework.


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316593 35697150-7ecd-e111-bb59-0022644237b5

--- a/cad/layouteditor/Makefile
+++ b/cad/layouteditor/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	layouteditor
-# Date created:				Sun, Apr 29 2007
-# Whom:					Hiroki Sato <hrs@FreeBSD.org>
-#
+# Created by: Hiroki Sato <hrs@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	layouteditor
 PORTVERSION=	0.0.20110614
@@ -16,10 +12,11 @@ DISTNAME=	LayoutEditor-${PORTVERSION:S,^0.0.,,}-gpl-src
 MAINTAINER=	hrs@FreeBSD.org
 COMMENT=	IC/MEMS layout editor
 
+LIB_DEPENDS=	ttf:${PORTSDIR}/print/freetype
+
 USE_QT4=	corelib gui network moc_build sql uic_build \
 		rcc_build qmake qt3support xml
 USE_ZIP=	yes
-USE_FREETYPE=	yes
 WRKSRC=		${WRKDIR}/layout
 PLIST_FILES=	bin/layout
 
