--- a/mail/imapfilter/Makefile
+++ b/mail/imapfilter/Makefile
@@ -6,8 +6,8 @@
 #
 
 PORTNAME=	imapfilter
-PORTVERSION=	2.5.3
-PORTREVISION=	1
+PORTVERSION=	2.5.4
+#PORTREVISION=	0
 CATEGORIES=	mail
 
 MAINTAINER=	stefan@FreeBSD.org
@@ -23,7 +23,7 @@ LDFLAGS+=	-L${LOCALBASE}/lib -L${LUA_LIBDIR}
 USE_GITHUB=	yes
 GH_ACCOUNT=	lefcha
 GH_TAGNAME=	v${PORTVERSION}
-GH_COMMIT=	69b6501
+GH_COMMIT=	7593368
 
 MAN1=		imapfilter.1
 MAN5=		imapfilter_config.5
